--- a/style.css
+++ b/style.css
@@ -9,6 +9,22 @@
     text-align: center;
 }
 
+input[type="search"] {
+    -webkit-appearance: none;
+}
+
+.btn {
+    margin-top: 35px;
+    background-color: dimgray;
+    width: 75px;
+    padding: 10px;
+    border-radius: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    color: white;
+    box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.35);
+}
+
 h4 {
     text-align: center;
     transform: translateY(25px);
@@ -19,6 +35,20 @@ p {
     margin-top: 5px;
 }
 
+.list {
+    animation: aparecer 2s linear;
+}
+
+@keyframes aparecer {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
 .header {
     background-color: rgb(236, 236, 236);
     margin: auto;
@@ -27,7 +57,7 @@ p {
     font-size: 1.2em;
     border-radius: 10px 10px 0px 0px;
     padding: 5px;
-    box-shadow: 0px 15px 16px 0px rgba(0,0,0,0.25);
+    box-shadow: 0px 15px 16px 0px rgba(0, 0, 0, 0.25);
     border-bottom: 2px solid rgba(0, 0, 0, 0.384);
 }
 
@@ -37,7 +67,7 @@ p {
     padding: 5px;
     background-color: rgb(243, 243, 243);
     border-radius: 0px 0px 10px 10px;
-    box-shadow: 0px 15px 16px 0px rgba(0,0,0,0.25);
+    box-shadow: 0px 15px 16px 0px rgba(0, 0, 0, 0.25);
 }
 
 .text_deliver {
@@ -80,7 +110,7 @@ h2 {
     border: none;
     text-align: center;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.404);
-
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.404);
 }
 
 .texto:focus {
@@ -109,6 +139,7 @@ h2 {
         width: 95vw;
         border-radius: 20px 20px 0px 0px;
     }
+
     .product {
         width: 95vw;
     }
@@ -126,8 +157,9 @@ h2 {
     position: absolute;
     top: 0;
     left: 0;
-    background-color: rgba(255, 255, 255, 0.315);
+    background-color: rgba(255, 255, 255, 0.473);
     backdrop-filter: blur(9px);
+    -webkit-backdrop-filter: blur(12px);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -139,6 +171,7 @@ h2 {
     0% {
         opacity: 0;
     }
+
     100% {
         opacity: 1;
     }
@@ -157,7 +190,8 @@ h2 {
     0% {
         transform: rotate(0deg);
     }
+
     100% {
         transform: rotate(360deg);
     }
-    } 
+}
