--- a/style.css
+++ b/style.css
@@ -9,8 +9,82 @@
     text-align: center;
 }
 
+.popup {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.2em;
+    width: 90vw;
+    height: 40vh;
+    background-color: rgb(236, 236, 236);
+    border-radius: 15px;
+    backdrop-filter: blur(7px);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0px 15px 16px 0px rgba(0, 0, 0, 0.25);
+}
+
+body {
+    height: 100vh;
+}
+
+.ver {
+    color: red;
+    font-weight: 700;
+}
+
 input[type="search"] {
     -webkit-appearance: none;
+}
+
+#close {
+    position: absolute;
+    right: 22px;
+    top: 12px;
+    width: 32px;
+    height: 32px;
+    opacity: 1;
+}
+
+#close:hover {
+    opacity: 1;
+}
+
+#close:before,
+#close:after {
+    position: absolute;
+    left: 15px;
+    content: ' ';
+    height: 33px;
+    width: 2px;
+    background-color: red;
+}
+
+#close:before {
+    transform: rotate(45deg);
+}
+
+#close:after {
+    transform: rotate(-45deg);
+}
+
+
+#projectProduct {
+    transform: translatey(50px);
+    margin-bottom: 100px;
+    border-radius: 15px;
+}
+
+#projectProduct p {
+    padding-bottom: 10px;
+    border-bottom: 1px solid rgb(146, 146, 146);
+}
+
+p#conserto6 {
+    border-bottom: none;
+    margin-top: 7px;
 }
 
 .btn {
@@ -154,7 +228,7 @@ h2 {
 .loaderbox {
     width: 100vw;
     height: 100vh;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     background-color: rgba(255, 255, 255, 0.473);
@@ -165,6 +239,7 @@ h2 {
     justify-content: center;
     z-index: 11111;
     animation: appear 0.5s ease-in-out;
+    overflow: hidden;
 }
 
 @keyframes appear {
