--- a/style.css
+++ b/style.css
@@ -26,6 +26,10 @@
     box-shadow: 0px 15px 16px 0px rgba(0, 0, 0, 0.25);
 }
 
+.popup p {
+    transform: translateZ(0);
+}
+
 body {
     height: 100vh;
 }
