--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
 }
 
 body {
-    height: 100vh;
+    height: 100vh + 50px;
 }
 
 .ver {
@@ -141,6 +141,7 @@ p {
 
 .product {
     max-width: 650px;
+    margin-bottom: 50px;
     margin: auto;
     padding: 5px;
     background-color: rgb(243, 243, 243);
