--- a/style.css
+++ b/style.css
@@ -8,7 +8,18 @@
     font-family: 'Montserrat', sans-serif;
     text-align: center;
 }
-
+.popbox {
+    background-color: rgba(255, 255, 255, 0.582);
+    display: none;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    z-index: 111111;
+}
 .popup {
     display: none;
     align-items: center;
