--- a/style.css
+++ b/style.css
@@ -10,6 +10,36 @@
 
 *::selection {
     background-color: hsl(335, 100%, 50%);
+    color: white;
+}
+
+.pop {
+    display: none;
+    position: fixed;
+    top: 85vh;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #A7727D;
+    color: white;
+    padding: 10px;
+    margin: auto;
+    border-radius: 50px;
+    animation: pop 2s ease-in-out;
+}
+
+@keyframes pop {
+    0% {
+        transform: translateX(200%);
+    }
+    10% {
+        transform: translateX(-50%);
+    }
+    90%{
+        transform: translateX(-50%);
+    }
+    100% {
+        transform: translateX(-300%);
+    }
 }
 
 html {
@@ -68,11 +98,6 @@ body {
     width: 100vw;
     min-height: 100vh;
     background-color: #A7727D;
-}
-
-.product p:active {
-    background-color: #EDDBC7;
-    border-radius: 50px;
 }
 
 .ver {
@@ -160,9 +185,19 @@ input[type="search"] {
 }
 
 h4 {
+    margin: auto;
+    width: 250px;
+    color: white;
     text-align: center;
     transform: translateY(25px);
     font-size: 1.5em;
+    background-color: #A7727D;
+    padding: 5px;
+    border-radius: 50px;
+}
+
+.icon {
+    color: white;
 }
 
 .list {
